# BLEEP-

./: .gitmodules  BUILDING.md  CHANGELOG.md  Cargo.toml  DEVLOG.md  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  WHITEPAPER.md  demo_interchain.sh  state.json
.github/workflows/: ci.yml
crates/bleep-ai/: Cargo.toml
crates/bleep-auth/: Cargo.toml
crates/bleep-auth/src/: lib.rs  session.rs
crates/bleep-cli/: Cargo.toml
crates/bleep-cli/src/: cli.rs
crates/bleep-consensus/: Cargo.toml  README.md
crates/bleep-consensus/src/: block_producer.rs
crates/bleep-core/: Cargo.toml  README.md
crates/bleep-core/src/: block.rs  block_validation.rs
crates/bleep-crypto/: Cargo.toml  README.md
crates/bleep-economics/: Cargo.toml
crates/bleep-governance/: Cargo.toml  README.md
crates/bleep-governance/src/: live_governance.rs  protocol_evolution.rs  protocol_rules.rs
crates/bleep-governance/tests/: export_import.rs
crates/bleep-indexer/: Cargo.toml
crates/bleep-interop/bleep-connect-commitment-chain/: Cargo.toml
crates/bleep-interop/bleep-connect-core/: Cargo.toml
crates/bleep-p2p/: Cargo.toml  README.md
crates/bleep-pat/: Cargo.toml
crates/bleep-rpc/: Cargo.toml
crates/bleep-rpc/src/: lib.rs
crates/bleep-scheduler/: README.md
crates/bleep-state/: Cargo.toml  README.md
crates/bleep-vm/: Cargo.toml  README.md
crates/bleep-wallet-core/: Cargo.toml
crates/bleep-zkp/: Cargo.toml  README.md
docs/: THREAT_MODEL.md  architecture.md
scripts/: deploy_testnet.sh
tests/: sprint9_integration.rs  test_p2p.rs
tools/governance-demo/: Cargo.toml
(+19 files in other folders)
