[package]
name        = "bleep-cli"
version     = "1.0.0"
edition     = "2021"
authors     = ["Muhammad Attahir"]
license     = "MIT OR Apache-2.0"
description = "BLEEP Blockchain CLI"

[dependencies]
tokio              = { version = "1.36", features = ["full"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
tracing            = "0.1.40"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow             = "1.0.80"
clap               = { version = "4.5.1", features = ["derive"] }

# Internal crates
bleep-core        = { path = "../bleep-core" }
bleep-wallet-core = { path = "../bleep-wallet-core" }
bleep-ai          = { path = "../bleep-ai" }
bleep-crypto      = { path = "../bleep-crypto" }
bleep-pat         = { path = "../bleep-pat" }
bleep-state       = { path = "../bleep-state" }
bleep-zkp         = { path = "../bleep-zkp" }
bleep-auth        = { path = "../bleep-auth" }
reqwest           = { version = "0.13.3", features = ["json"] }
sha3              = "0.10"
hex               = "0.4"
base64            = "0.21"
chrono            = { version = "0.4", features = ["serde"] }
bleep-telemetry   = { path = "../bleep-telemetry" }
bleep-governance  = { path = "../bleep-governance" }
bleep-consensus   = { path = "../bleep-consensus" }
bleep-p2p         = { path = "../bleep-p2p" }

[[bin]]
name = "bleep-cli"
path = "src/cli.rs"
